RESOLVED FIXED Bug 229948
webgl/2.0.y/deqp/functional/gles3/negativetextureapi.html fails on Metal
https://bugs.webkit.org/show_bug.cgi?id=229948
Summary webgl/2.0.y/deqp/functional/gles3/negativetextureapi.html fails on Metal
Kimmo Kinnunen
Reported 2021-09-06 02:22:58 PDT
This test runs the WebGL Test listed below in an iframe and reports PASS or FAIL. Test: ../../../../resources/webgl_test_files/deqp/functional/gles3/negativetextureapi.html?webglVersion=2 [ 1: PASS ] negativeTextureApi.activetexture: Passed [ 2: PASS ] negativeTextureApi.bindTexture: Passed [ 3: PASS ] negativeTextureApi.compressedteximage2d_invalid_target: Passed [ 4: PASS ] negativeTextureApi.compressedteximage2d_invalid_format: Passed [ 5: PASS ] negativeTextureApi.compressedteximage2d_neg_level: Passed [ 6: PASS ] negativeTextureApi.compressedteximage2d_max_level: Passed [ 7: PASS ] negativeTextureApi.compressedteximage2d_neg_width_height: Passed [ 8: PASS ] negativeTextureApi.compressedteximage2d_max_width_height: Passed [ 9: PASS ] negativeTextureApi.compressedteximage2d_invalid_border: Passed [ 10: PASS ] negativeTextureApi.compressedteximage2d_invalid_size: Passed [ 11: PASS ] negativeTextureApi.copyteximage2d_invalid_target: Passed [ 12: PASS ] negativeTextureApi.copyteximage2d_invalid_format: Passed [ 13: PASS ] negativeTextureApi.copyteximage2d_inequal_width_height_cube: Passed [ 14: PASS ] negativeTextureApi.copyteximage2d_neg_level: Passed [ 15: PASS ] negativeTextureApi.copyteximage2d_max_level: Passed [ 16: PASS ] negativeTextureApi.copyteximage2d_neg_width_height: Passed [ 17: PASS ] negativeTextureApi.copyteximage2d_max_width_height: Passed [ 18: PASS ] negativeTextureApi.copyteximage2d_invalid_border: Passed [ 19: PASS ] negativeTextureApi.copyteximage2d_incomplete_framebuffer: Passed [ 20: PASS ] negativeTextureApi.copytexsubimage2d_invalid_target: Passed [ 21: PASS ] negativeTextureApi.copytexsubimage2d_neg_level: Passed [ 22: PASS ] negativeTextureApi.copytexsubimage2d_max_level: Passed [ 23: PASS ] negativeTextureApi.copytexsubimage2d_neg_offset: Passed [ 24: PASS ] negativeTextureApi.copytexsubimage2d_invalid_offset: Passed [ 25: PASS ] negativeTextureApi.copytexsubimage2d_neg_width_height: Passed [ 26: PASS ] negativeTextureApi.copytexsubimage2d_incomplete_framebuffer: Passed [ 27: PASS ] negativeTextureApi.deletetextures: Passed [ 28: PASS ] negativeTextureApi.generatemipmap: Passed [ 29: PASS ] negativeTextureApi.pixelstorei: Passed [ 30: PASS ] negativeTextureApi.teximage2d: Passed [ 31: PASS ] negativeTextureApi.teximage2d_inequal_width_height_cube: Passed [ 32: PASS ] negativeTextureApi.teximage2d_neg_level: Passed [ 33: PASS ] negativeTextureApi.teximage2d_max_level: Passed [ 34: PASS ] negativeTextureApi.teximage2d_neg_width_height: Passed [ 35: PASS ] negativeTextureApi.teximage2d_max_width_height: Passed [ 36: PASS ] negativeTextureApi.teximage2d_invalid_border: Passed [ 37: PASS ] negativeTextureApi.texsubimage2d: Passed [ 38: PASS ] negativeTextureApi.texsubimage2d_neg_level: Passed [ 39: PASS ] negativeTextureApi.texsubimage2d_max_level: Passed [ 40: PASS ] negativeTextureApi.texsubimage2d_neg_offset: Passed [ 41: PASS ] negativeTextureApi.texsubimage2d_invalid_offset: Passed [ 42: PASS ] negativeTextureApi.texsubimage2d_neg_width_height: Passed [ 43: PASS ] negativeTextureApi.texparameteri: Passed [ 44: PASS ] negativeTextureApi.texparameterf: Passed [ 45: PASS ] negativeTextureApi.compressedtexsubimage2d: Passed [ 46: PASS ] negativeTextureApi.compressedtexsubimage2d_neg_level: Passed [ 47: PASS ] negativeTextureApi.compressedtexsubimage2d_max_level: Passed [ 48: PASS ] negativeTextureApi.compressedtexsubimage2d_neg_offset: Passed [ 49: PASS ] negativeTextureApi.compressedtexsubimage2d_invalid_offset: Passed [ 50: PASS ] negativeTextureApi.compressedtexsubimage2d_neg_width_height: Passed [ 51: PASS ] negativeTextureApi.compressedtexsubimage2d_invalid_size: Passed [ 52: PASS ] negativeTextureApi.teximage3d: Passed [ 53: PASS ] negativeTextureApi.teximage3d_neg_level: Passed [ 54: PASS ] negativeTextureApi.teximage3d_max_level: Passed [ 55: PASS ] negativeTextureApi.teximage3d_neg_width_height_depth: Passed [ 56: PASS ] negativeTextureApi.teximage3d_max_width_height_depth: Passed [ 57: PASS ] negativeTextureApi.teximage3d_invalid_border: Passed [ 58: PASS ] negativeTextureApi.texsubimage3d: Passed [ 59: PASS ] negativeTextureApi.texsubimage3d_neg_level: Passed [ 60: PASS ] negativeTextureApi.texsubimage3d_max_level: Passed [ 61: PASS ] negativeTextureApi.texsubimage3d_neg_offset: Passed [ 62: PASS ] negativeTextureApi.texsubimage3d_invalid_offset: Passed [ 63: PASS ] negativeTextureApi.texsubimage3d_neg_width_height: Passed [ 64: PASS ] negativeTextureApi.copytexsubimage3d: Passed [ 65: PASS ] negativeTextureApi.copytexsubimage3d_neg_level: Passed [ 66: PASS ] negativeTextureApi.copytexsubimage3d_max_level: Passed [ 67: PASS ] negativeTextureApi.copytexsubimage3d_neg_offset: Passed [ 68: PASS ] negativeTextureApi.copytexsubimage3d_invalid_offset: Passed [ 69: PASS ] negativeTextureApi.copytexsubimage3d_neg_width_height: Passed [ 70: PASS ] negativeTextureApi.copytexsubimage3d_incomplete_framebuffer: Passed [ 71: PASS ] negativeTextureApi.compressedteximage3d: Passed [ 72: PASS ] negativeTextureApi.compressedteximage3d_neg_level: Passed [ 73: PASS ] negativeTextureApi.compressedteximage3d_max_level: Passed [ 74: PASS ] negativeTextureApi.compressedteximage3d_neg_width_height_depth: Passed [ 75: PASS ] negativeTextureApi.compressedteximage3d_max_width_height_depth: Passed [ 76: PASS ] negativeTextureApi.compressedteximage3d_invalid_border: Passed [ 77: PASS ] negativeTextureApi.compressedteximage3d_invalid_size: Passed [ 78: PASS ] negativeTextureApi.compressedtexsubimage3d: Passed [ 79: PASS ] negativeTextureApi.compressedtexsubimage3d_neg_level: Passed [ 80: PASS ] negativeTextureApi.compressedtexsubimage3d_max_level: Passed [ 81: PASS ] negativeTextureApi.compressedtexsubimage3d_neg_offset: Passed [ 82: PASS ] negativeTextureApi.compressedtexsubimage3d_invalid_offset: Passed [ 83: PASS ] negativeTextureApi.compressedtexsubimage3d_neg_width_height_depth: Passed [ 84: PASS ] negativeTextureApi.compressedtexsubimage3d_invalid_size: Passed [ 85: PASS ] negativeTextureApi.texstorage2d: Passed [ 86: PASS ] negativeTextureApi.texstorage2d_invalid_binding: Passed [ 87: PASS ] negativeTextureApi.texstorage2d_invalid_levels: Passed [ 88: FAIL ] negativeTextureApi.texstorage3d: Expected gl.INVALID_ENUM, but got gl.INVALID_OPERATION. [ 89: PASS ] negativeTextureApi.texstorage3d_invalid_binding: Passed [ 90: PASS ] negativeTextureApi.texstorage3d_invalid_levels: Passed [ 91: PASS ] negativeTextureApi.texstorage3d_invalid_levels: successfullyParsed is true [ FAIL ] 1 failures reported
Attachments
Patch (3.34 KB, patch)
2021-09-06 11:34 PDT, Kimmo Kinnunen
no flags
Patch (17.53 KB, patch)
2021-09-06 23:16 PDT, Kimmo Kinnunen
no flags
Patch for landing (17.31 KB, patch)
2021-09-08 01:21 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2021-09-06 11:34:01 PDT
Kimmo Kinnunen
Comment 2 2021-09-06 23:16:02 PDT
Kimmo Kinnunen
Comment 3 2021-09-08 01:21:02 PDT
Created attachment 437609 [details] Patch for landing
EWS
Comment 4 2021-09-08 02:04:34 PDT
Committed r282135 (241432@main): <https://commits.webkit.org/241432@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437609 [details].
Radar WebKit Bug Importer
Comment 5 2021-09-08 02:05:21 PDT
Note You need to log in before you can comment on or make changes to this bug.