webgl/2.0.y/deqp/functional/gles3/negativetextureapi.html fails on Metal https://bugs.webkit.org/show_bug.cgi?id=229948

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-09-08
Reviewed by Dean Jackson.

Source/WebCore:

Validate the texStorage3D target using correct
validation function. The validation should be removed, as
same is done in ANGLE, but for consistency it should be
removed from all functions. Until removal, use correct
WebKit-side validation too.

Fixes tests:
webgl/2.0.0/deqp/functional/gles3/negativetextureapi.html
webgl/2.0.y/deqp/functional/gles3/negativetextureapi.html
webgl/2.0.0/conformance2/textures/misc/tex-storage-and-subimage-3d.html
webgl/2.0.y/conformance2/textures/misc/tex-storage-and-subimage-3d.html

* html/canvas/WebGL2RenderingContext.cpp:
(WebCore::WebGL2RenderingContext::texStorage3D):

LayoutTests:

Enable webgl/2.0.y/deqp/functional/gles3/negativetextureapi.html
explicitly until 2.0.y is activated.

* webgl/TestExpectations:
* webgl/2.0.0/conformance2/textures/misc/tex-storage-and-subimage-3d-expected.txt:
* webgl/2.0.0/deqp/functional/gles3/negativetextureapi-expected.txt:

Canonical link: https://commits.webkit.org/241432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282135 268f45cc-cd09-0410-ab3c-d52691b4dbfc